# FastAPI-Base-App

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.bat
app/: .env.template  main.py  run.py
app/alembic/: env.py
app/core/: config.py
app/utils/: __init__.py
src/: .env.template  app.py  main.py  main_gunicorn.py  main_uvicorn.py  run.py
src/alembic/: env.py
src/alembic/versions/: 2025_08_14_1614-b7c229ed7344_first_migration.py  2025_10_27_1440-8995018e555e_add_user_model.py  2025_12_30_1348-056321543d79_init_migration.py
src/api/: __init__.py
src/api/v1/: __init__.py  user.py
src/api/v1/schemas/: user.py
src/api/v1/views/: __init__.py  users.py
src/core/: __init__.py  config.py  decorators.py  gunicorn.py
src/core/db/models/: base.py  user.py
src/core/error/: __init__.py  errors.py  handler.py
src/core/exception/: __init__.py  handler.py  integrity_error_parser.py
src/core/gunicorn/: application.py
src/core/utils/: __init__.py  case_converter.py  str_tools.py
src/db/: db_helper.py  helper.py
src/db/models/: __init__.py  _base.py  base.py  user.py
src/db/repositories/: __init__.py  _base.py  user.py
src/services/: __init__.py  user.py
src/templates/: index.html
src/utils/: __init__.py
